# reduct-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.codex/skills/create-pr/: SKILL.md
.codex/skills/fix-tests/: SKILL.md
.github/actions/aws-cargo-cache/: action.yml
.github/actions/snap-release/: action.yml
.github/workflows/: ci.yml
snap/: snapcraft.yaml
src/: cmd.rs  config.rs  context.rs  helpers.rs  main.rs  parse.rs
src/cmd/: alias.rs  attachment.rs  bucket.rs  cp.rs  lifecycle.rs  login.rs  replica.rs  rm.rs  server.rs  table.rs  token.rs  write.rs
src/cmd/alias/: add.rs
src/cmd/attachment/: helpers.rs  ls.rs  read.rs  rm.rs  write.rs
src/cmd/bucket/: create.rs  helpers.rs  ls.rs  rename.rs  rm.rs  show.rs  update.rs
src/cmd/cp/: b2b.rs  b2f.rs  helpers.rs
src/cmd/lifecycle/: create.rs  helpers.rs  ls.rs  mode.rs  rm.rs  show.rs  update.rs
src/cmd/replica/: create.rs  helpers.rs  ls.rs  mode.rs  rm.rs  show.rs  update.rs
src/cmd/rm/: batch_remover.rs  query_remover.rs
src/cmd/server/: alive.rs  license.rs  status.rs
src/cmd/token/: create.rs  ls.rs  rm.rs  rotate.rs  show.rs
src/io/: reduct.rs  std.rs
src/parse/: helpers.rs  resource_path.rs  widely_used_args.rs
