[package]
name = "reduct-cli"
version = "0.9.4"
edition = "2021"
authors = ["Alexey Timin <atimin@reduct.store>"]
rust-version = "1.89.0"
license = "MPL-2.0"
keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["command-line-utilities", "database"]
homepage = "https://reduct.store"
repository = "https://github.com/reductstore/reduct-cli"
documentation = "https://reduct.store/docs/guides"

description = "A CLI client for ReductStore written in Rust"

[dependencies]
reduct-rs = "1.17.2"
clap = { version = "4.5.53", features = ["cargo"] }
dirs = "6.0.0"
toml = "0.9.8"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
url = { version = "2.5.4", features = ["serde"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
time-humanize = "0.1.3"
bytesize = "2.0.1"
colored = "3.0.0"
chrono = "0.4.41"
dialoguer = "0.12.0"
futures-util = { version = "0.3.30", features = [] }
indicatif = "0.18.3"
async-trait = "0.1.89"
bytes = "1.11.0"
mime_guess = "2.0.4"
serde_json = "1.0.146"
tabled = "0.20.0"
log = "0.4.28"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.20.0"
mockall = "0.13.1"
