[package]
name = "reduct-cli"
version = "0.12.2"
edition = "2021"
authors = ["Alexey Timin <atimin@reduct.store>"]
rust-version = "1.91.0"
license = "MPL-2.0"
keywords = ["database", "time-series", "blob", "storage", "reductstore"]
categories = ["command-line-utilities", "database"]
homepage = "https://reduct.store"
repository = "https://github.com/reductstore/reduct-cli"
documentation = "https://reduct.store/docs/guides"

description = "A CLI client for ReductStore written in Rust"

[dependencies]
reduct-rs = { version = "1.20.0", git = "https://github.com/reductstore/reduct-rs", branch = "main" }
clap = { version = "4.6.1", features = ["cargo"] }
dirs = "6.0.0"
toml = "1.0.6"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
url = { version = "2.5.4", features = ["serde"] }
tokio = { version = "1.52.3", features = ["io-util", "net", "rt-multi-thread", "time"] }
time-humanize = "0.1.3"
bytesize = "2.3.1"
colored = "3.0.0"
chrono = "0.4.41"
dialoguer = "0.12.0"
futures-util = { version = "0.3.30", features = [] }
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
indicatif = "0.18.3"
async-trait = "0.1.89"
bytes = "1.11.0"
mime_guess = "2.0.4"
serde_json = "1.0.150"
tabled = "0.21.0"
log = "0.4.31"

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.20.0"
mockall = "0.15.0"

[features]
integration-tests = []
